--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "@arcgis/map-components": "^4.34.0-next.122"
+    "@arcgis/map-components": "4.34.0-next.127"
   }
 }
