--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "typescript": "~5.9.2",
+    "vite": "^7.1.7"
   },
   "dependencies": {
-    "@arcgis/map-components": "^4.34.0-next.142"
+    "@arcgis/map-components": "4.34.0-next.143"
   }
 }
